# datapackage-attrs

./: .gitignore  mypy.ini  pyproject.toml  simple.py  test_file.py  test_simple_schema.json
datapackage_attrs/: _maybe_tableschema.py  _types.py  generate.py  module_classes.py  mypy_plugin.py
examples/: test_schema_full.py  test_simple_schema.json  test_simple_schema.py
frictionless_code_generator/: __main__.py  _types.py  configuration.py  generate.py  module_classes.py
